fix: update logo link to use relative path

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <div
             class="container d-flex justify-content-between align-items-center"
           >
-            <a href="/">
+            <a href="./">
               <img
                 src="https://im.mgt.ncu.edu.tw/img/mis_newlogo_compressor.png"
                 alt="NCU MIS Logo"
